--- a/ServiceStation/Views/Home/Index.cshtml
+++ b/ServiceStation/Views/Home/Index.cshtml
@@ -1,5 +1,39 @@
 ﻿
+
 @{
-    ViewBag.Title = "Index";
+    ViewBag.TitleClient = "Check card of the client";
+    ViewBag.TitleCar = "Check the free car";
+    ViewBag.Subheading = "(customer)";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div class="container-fluid">
+    <!-- Page Heading -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                @ViewBag.TitleClient
+                <small>@ViewBag.Subheading</small>
+            </h1>
+            @Html.Partial("_Check_Client")
+        </div>
+    </div>
+    <!-- /.row -->
+</div>
+<!-- /.container-fluid -->
+
+
+<div class="container-fluid">
+    <!-- Page Heading -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                @ViewBag.TitleCar
+                <small>@ViewBag.Subheading</small>
+            </h1>
+            @Html.Partial("_Check_Car")
+        </div>
+    </div>
+    <!-- /.row -->
+</div>
+<!-- /.container-fluid -->
